--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,8 @@
 }
 
 body {
+  margin-top: 30vh;
+  margin-bottom: 80vh;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
